CHANGELOG.txt
=============

0.7.3
- several bugfixes:
-

0.7.2
- no new features, only code refactoring


0.7.1
- new welcome page with all covers shown


0.7
- options dialog
- media are now playable with two clicks!
- bugfixes


0.6.6
- Refactor the CollectionDialog listView and the Collection class
- Tags are editable in EditMediaDialog
- Operationnal tag filter
- bugfix: no more colors in the listView


0.6.5
- clean the empty program state
- media selection is now multiple
- tags are displayed in the info area
- first operational edit dialog to show media details
- translation updates


0.6.4
- context menu to update database about seen movies OK
- queries stop when the network is not available
- first version of statistics page, with only global stat


0.6.3
- specific label for number of movies
- title and watched/unwatched filters OK
- first draft of context menu for the listview, not functional yet


0.6.2
- the title line restricts the media list to what its text
- clear button in the filter edit line
- no more context menu in the info view
- deep source organisation change
- first version of connection checker, may freeze the GUI !!


0.6.1
- imdb updating is done in its own thread, it is now stoppable
- collection rescan is possible, thanks to kushal


0.6
- first fully operationnal imdb research!
- most errors are handled
- imdb info are displayed
- users get a color info about research status


0.5.7
- imdb requests almost functional
- bugs (even crashes) during info retrieval are possible


0.5.6
- further imdb api with InfoImdb class
- operational imdb search
- only redirected movie page from search is operational
- beginning of a user-oriented imdb replys visualisation


0.5.5
- use of MEDIASPY_HOME environment variable to handle translations location
- initial commit of imdb api (not fully functional yet)
    1. added InfoManager class (which is a singleton)
    2. added imdbInfo field in Media database table and in Media class